fix configuration files and add approvalWrite implementation

--- a/src/main/webapp/resources/html/approvalform.html
+++ b/src/main/webapp/resources/html/approvalform.html
@@ -1,5 +1,5 @@
 <div id="A4" class="mceNonEditable" style="border: 1px solid black; width:210mm; height: 297mm; position: relative; display:flex; justify-content: center;">
-	<div id="A4_title" class="text-title mceNonEditable" style="position: absolute; top: 5mm;">
+	<div id="A4_title" class="text-title documentType mceNonEditable" style="position: absolute; top: 5mm;">
 		결재품의서
 	</div>
 	
@@ -10,11 +10,11 @@
 					<tbody>
 						<tr style="height: 50%;">
 							<td class="content-align-center text-title-semi" style="width: 18mm;">문서번호</td>
-							<td class="content-align-center text-content">01-111</td>
+							<td class="content-align-center text-content documentId">01-111</td>
 						</tr>
 						<tr>
 							<td class="content-align-center text-title-semi" style="width: 18mm;">보존기간</td>
-							<td class="content-align-center text-content">5년</td>
+							<td class="content-align-center text-content documentRetentionPeriod">5년</td>
 						</tr>
 					</tbody>
 				</table>
@@ -24,23 +24,27 @@
 		<section style="width: 90mm;">		
 			<article>
 				<table class="form-table">
-					<tbody>
+					<tbody class="documentApprovalLine">
 						<tr>
 							<td class="content-align-center text-title-semi" rowspan="4" style="width: 20%;">결재</td>
 							<td class="content-align-center text-content">부장</td>
 							<td class="content-align-center text-content">대표이사</td>
 						</tr>
 						<tr style="height: 50%;">
-							<td class="content-align-center text-content">(결정 표시)</td>
-							<td class="content-align-center text-content">(결정 표시)</td>
+							<td class="approvalLineState content-align-center text-content">미결</td>
+							<td class="approvalLineState content-align-center text-content">미결</td>
 						</tr>
 						<tr>
 							<td class="content-align-center text-content">마부장</td>
 							<td class="content-align-center text-content">최전무</td>
 						</tr>
+						<tr style="display: none;">
+							<td class="employeeId">2302272</td>
+							<td class="employeeId">2302273</td>
+						</tr>
 						<tr>
-							<td class="content-align-center text-content">2023/02/14</td>
-							<td class="content-align-center text-content">2023/02/14</td>
+							<td class="approvalDate content-align-center text-content">2023/02/14</td>
+							<td class="approvalDate content-align-center text-content">2023/02/14</td>
 						</tr>
 					</tbody>
 				</table>
@@ -78,7 +82,7 @@
 					<tbody>
 						<tr style="height: 20mm;">
 							<td class="content-align-center text-title-semi" style="width: 10%;">제목</td>
-							<td class="content-align-center text-content mceEditable">공공사업1DIV 인력충원 요청</td>
+							<td class="content-align-center text-content mceEditable documentTitle">공공사업1DIV 인력충원 요청</td>
 						</tr>
 						<tr style="height: 130mm;">
 							<td class="content-align-center text-title-semi" style="width: 10%;">내용</td>
@@ -93,7 +97,7 @@
 	<footer id="A4_footer" class="mceNonEditable" style="top: 285mm; left: 155mm;">
 		<section>
 			<article style="height: 20mm;">
-				문서작성날짜: 2023.02.14
+				문서작성날짜: <span class="documentWriteDate">2023-02-14</span>
 			</article>
 		</section>
 	</footer>
