implementing approval write

--- a/src/main/webapp/resources/html/approvalform.html
+++ b/src/main/webapp/resources/html/approvalform.html
@@ -4,47 +4,34 @@
 	</div>
 	
 	<header id="A4_header" class="mceNonEditable" style="top: 25mm;">
-		<section style="width: 70mm;">
+		<section style="width: 45mm;">
 			<article>
 				<table class="form-table">
 					<tbody>
 						<tr style="height: 50%;">
 							<td class="content-align-center text-title-semi" style="width: 18mm;">문서번호</td>
-							<td class="content-align-center text-content documentId">01-111</td>
+							<td class="content-align-center text-content documentId" style="width: 27mm;">01-111</td>
 						</tr>
 						<tr>
 							<td class="content-align-center text-title-semi" style="width: 18mm;">보존기간</td>
-							<td class="content-align-center text-content documentRetentionPeriod">5년</td>
+							<td class="content-align-center text-content documentRetentionPeriod" style="width: 27mm;">5년</td>
 						</tr>
 					</tbody>
 				</table>
 			</article>
 		</section>
-		<section style="width: 20mm;"></section>
-		<section style="width: 90mm;">		
+		<section style="width: 135mm;">
 			<article>
 				<table class="form-table">
 					<tbody class="documentApprovalLine">
-						<tr>
-							<td class="content-align-center text-title-semi" rowspan="4" style="width: 20%;">결재</td>
-							<td class="content-align-center text-content">부장</td>
-							<td class="content-align-center text-content">대표이사</td>
+						<tr id="position">
+							<td class="content-align-center text-title-semi" rowspan="4" style="width: 15%;">결재</td>
 						</tr>
-						<tr style="height: 50%;">
-							<td class="approvalLineState content-align-center text-content">미결</td>
-							<td class="approvalLineState content-align-center text-content">미결</td>
+						<tr id="state" style="height: 50%;">
 						</tr>
-						<tr>
-							<td class="content-align-center text-content">마부장</td>
-							<td class="content-align-center text-content">최전무</td>
+						<tr id="name">
 						</tr>
-						<tr style="display: none;">
-							<td class="employeeId">2302272</td>
-							<td class="employeeId">2302273</td>
-						</tr>
-						<tr>
-							<td class="approvalDate content-align-center text-content">2023/02/14</td>
-							<td class="approvalDate content-align-center text-content">2023/02/14</td>
+						<tr id="date">
 						</tr>
 					</tbody>
 				</table>
