update approval write and implement getDraftList

--- a/src/main/webapp/resources/html/businesstripform.html
+++ b/src/main/webapp/resources/html/businesstripform.html
@@ -1,6 +1,6 @@
 <div id="A4" class="mceNonEditable" style="border: 1px solid black; width:210mm; height: 297mm; position: relative; display:flex; justify-content: center;">
 	<div id="A4_title" class="text-title documentType mceNonEditable" style="position: absolute; top: 5mm;">
-		휴일근무품의서
+		출장품의서
 	</div>
 	
 	<header id="A4_header" class="mceNonEditable" style="top: 25mm;">
@@ -65,11 +65,27 @@
 						<td class="content-align-center text-content mceEditable documentTitle"></td>
 					</tr>
 					<tr style="height: 20mm;">
-						<td class="content-align-center text-title-semi" style="width: 10%;">근무날짜</td>
+						<td class="content-align-center text-title-semi" style="width: 10%;">출장시작날짜</td>
 						<td class="content-align-center text-content mceEditable"></td>
 					</tr>
 					<tr style="height: 20mm;">
-						<td class="content-align-center text-title-semi" style="width: 10%;">근무사유</td>
+						<td class="content-align-center text-title-semi" style="width: 10%;">출장종료날짜</td>
+						<td class="content-align-center text-content mceEditable"></td>
+					</tr>
+					<tr style="height: 20mm;">
+						<td class="content-align-center text-title-semi" style="width: 10%;">경비</td>
+						<td class="content-align-center text-content mceEditable"></td>
+					</tr>
+					<tr style="height: 20mm;">
+						<td class="content-align-center text-title-semi" style="width: 10%;">출장장소</td>
+						<td class="content-align-center text-content mceEditable"></td>
+					</tr>
+					<tr style="height: 20mm;">
+						<td class="content-align-center text-title-semi" style="width: 10%;">출장사유</td>
+						<td class="content-align-center text-content mceEditable"></td>
+					</tr>
+					<tr style="height: 20mm;">
+						<td class="content-align-center text-title-semi" style="width: 10%;">출장 중 연락처</td>
 						<td class="content-align-center text-content mceEditable"></td>
 					</tr>
 				</tbody>
