--- a/src/main/webapp/resources/html/militaryserviceform.html
+++ b/src/main/webapp/resources/html/militaryserviceform.html
@@ -1,6 +1,6 @@
 <div id="A4" class="mceNonEditable" style="border: 1px solid black; width:210mm; height: 297mm; position: relative; display:flex; justify-content: center;">
 	<div id="A4_title" class="text-title documentType mceNonEditable" style="position: absolute; top: 5mm;">
-		휴일근무품의서
+		예비군공가품의서
 	</div>
 	
 	<header id="A4_header" class="mceNonEditable" style="top: 25mm;">
@@ -65,11 +65,15 @@
 						<td class="content-align-center text-content mceEditable documentTitle"></td>
 					</tr>
 					<tr style="height: 20mm;">
-						<td class="content-align-center text-title-semi" style="width: 10%;">근무날짜</td>
+						<td class="content-align-center text-title-semi" style="width: 10%;">훈련날짜</td>
 						<td class="content-align-center text-content mceEditable"></td>
 					</tr>
 					<tr style="height: 20mm;">
-						<td class="content-align-center text-title-semi" style="width: 10%;">근무사유</td>
+						<td class="content-align-center text-title-semi" style="width: 10%;">훈련기간</td>
+						<td class="content-align-center text-content mceEditable"></td>
+					</tr>
+					<tr style="height: 20mm;">
+						<td class="content-align-center text-title-semi" style="width: 10%;">훈련장소</td>
 						<td class="content-align-center text-content mceEditable"></td>
 					</tr>
 				</tbody>
