--- a/src/main/webapp/resources/html/businesstripform.html
+++ b/src/main/webapp/resources/html/businesstripform.html
@@ -66,11 +66,11 @@
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">출장시작날짜</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="content-align-center text-content mceEditable businessTripFormStartDate"></td>
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">출장종료날짜</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="content-align-center text-content mceEditable businessTripFormEndDate"></td>
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">경비</td>
