--- a/src/main/webapp/resources/html/extraworkform.html
+++ b/src/main/webapp/resources/html/extraworkform.html
@@ -4,38 +4,56 @@
 	</div>
 	
 	<header id="A4_header" class="mceNonEditable" style="top: 25mm;">
-		<section class="mceNonEditable" style="width: 45mm;">
+		<section class="mceNonEditable" style="width: 180mm;">
 			<table class="form-table mceNonEditable">
 				<tbody class="mceNonEditable">
 					<tr style="height: 50%;">
-						<td class="content-align-center text-title-semi" style="width: 18mm;">문서번호</td>
-						<td class="content-align-center text-content documentId" style="width: 27mm;">공란</td>
+						<td class="content-align-center text-title-semi" style="width: 10%;">문서번호</td>
+						<td class="content-align-center text-content documentId">공란</td>
 					</tr>
 					<tr>
-						<td class="content-align-center text-title-semi" style="width: 18mm;">보존기간</td>
-						<td class="content-align-center text-content documentRetentionPeriod" style="width: 27mm;">공란</td>
+						<td class="content-align-center text-title-semi" style="width: 10%;">보존기간</td>
+						<td class="content-align-center text-content documentRetentionPeriod">공란</td>
 					</tr>
 				</tbody>
 			</table>
-		</section>
-		<section class="mceNonEditable" style="width: 135mm;">
-			<table class="form-table mceNonEditable">
-				<tbody class="documentApprovalLine mceNonEditable">
+			<table class="form-table mceNonEditable" style="border-top-style: none;">
+				<tbody class="mceNonEditable">
 					<tr id="formApprovalPosition">
-						<td class="content-align-center text-title-semi" rowspan="4" style="width: 15%;">결재</td>
+						<td class="content-align-center text-title-semi" rowspan="4" style="width: 10%;">결재</td>
+						<td id="positionText1" class="content-align-center text-content">공란</td>
+						<td id="positionText2" class="content-align-center text-content">공란</td>
+						<td id="positionText3" class="content-align-center text-content">공란</td>
+						<td id="positionText4" class="content-align-center text-content">공란</td>
+						<td id="positionText5" class="content-align-center text-content">공란</td>
 					</tr>
 					<tr id="formApprovalState" style="height: 50%;">
+						<td id="stateText1" class="content-align-center text-content">공란</td>
+						<td id="stateText2" class="content-align-center text-content">공란</td>
+						<td id="stateText3" class="content-align-center text-content">공란</td>
+						<td id="stateText4" class="content-align-center text-content">공란</td>
+						<td id="stateText5" class="content-align-center text-content">공란</td>
 					</tr>
 					<tr id="formApprovalName">
+						<td id="nameText1" class="content-align-center text-content">공란</td>
+						<td id="nameText2" class="content-align-center text-content">공란</td>
+						<td id="nameText3" class="content-align-center text-content">공란</td>
+						<td id="nameText4" class="content-align-center text-content">공란</td>
+						<td id="nameText5" class="content-align-center text-content">공란</td>
 					</tr>
 					<tr id="formApprovalDate">
+						<td id="nameText1" class="content-align-center text-content">공란</td>
+						<td id="nameText2" class="content-align-center text-content">공란</td>
+						<td id="nameText3" class="content-align-center text-content">공란</td>
+						<td id="nameText4" class="content-align-center text-content">공란</td>
+						<td id="nameText5" class="content-align-center text-content">공란</td>
 					</tr>
 				</tbody>
 			</table>
 		</section>
 	</header>
 	
-	<nav id="A4_nav" class="mceNonEditable" style="top: 75mm;">
+	<nav id="A4_nav" class="mceNonEditable" style="top: 125mm;">
 		<section class="mceNonEditable" style="width: 180mm;">
 			<table class="form-table mceNonEditable">
 				<tbody class="mceNonEditable">
@@ -56,7 +74,7 @@
 		</section>
 	</nav>
 	
-	<div id="A4_main" class="mceNonEditable" style="top: 125mm;">
+	<div id="A4_main" class="mceNonEditable" style="top: 175mm;">
 		<section class="mceNonEditable" style="width: 180mm;">
 			<table class="form-table mceNonEditable">
 				<tbody class="mceNonEditable">
@@ -66,11 +84,11 @@
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">근무날짜</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="content-align-center text-content mceEditable documentDateType"></td>
 					</tr>
 					<tr style="height: 60mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">근무사유</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="content-align-center text-content mceEditable documentTextType"></td>
 					</tr>
 				</tbody>
 			</table>
