--- a/src/main/webapp/resources/html/extraworkform.html
+++ b/src/main/webapp/resources/html/extraworkform.html
@@ -9,11 +9,11 @@
 				<tbody class="mceNonEditable">
 					<tr style="height: 50%;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">문서번호</td>
-						<td class="content-align-center text-content documentId">공란</td>
+						<td id="documentId" class="content-align-center text-content">공란</td>
 					</tr>
 					<tr>
 						<td class="content-align-center text-title-semi" style="width: 10%;">보존기간</td>
-						<td class="content-align-center text-content documentRetentionPeriod">공란</td>
+						<td id="documentRetentionPeriod" class="content-align-center text-content">공란</td>
 					</tr>
 				</tbody>
 			</table>
@@ -42,11 +42,11 @@
 						<td id="nameText5" class="content-align-center text-content">공란</td>
 					</tr>
 					<tr id="formApprovalDate">
-						<td id="nameText1" class="content-align-center text-content">공란</td>
-						<td id="nameText2" class="content-align-center text-content">공란</td>
-						<td id="nameText3" class="content-align-center text-content">공란</td>
-						<td id="nameText4" class="content-align-center text-content">공란</td>
-						<td id="nameText5" class="content-align-center text-content">공란</td>
+						<td id="dateText1" class="content-align-center text-content">공란</td>
+						<td id="dateText2" class="content-align-center text-content">공란</td>
+						<td id="dateText3" class="content-align-center text-content">공란</td>
+						<td id="dateText4" class="content-align-center text-content">공란</td>
+						<td id="dateText5" class="content-align-center text-content">공란</td>
 					</tr>
 				</tbody>
 			</table>
@@ -80,15 +80,15 @@
 				<tbody class="mceNonEditable">
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">제목</td>
-						<td class="content-align-center text-content mceEditable documentTitle"></td>
+						<td id="documentTitle" class="content-align-center text-content mceEditable"></td>
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">근무날짜</td>
-						<td class="content-align-center text-content mceEditable documentDateType"></td>
+						<td class="content-align-center text-content mceEditable"></td>
 					</tr>
 					<tr style="height: 60mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">근무사유</td>
-						<td class="content-align-center text-content mceEditable documentTextType"></td>
+						<td class="content-align-center text-content mceEditable"></td>
 					</tr>
 				</tbody>
 			</table>
