--- a/src/main/webapp/resources/html/extraworkform.html
+++ b/src/main/webapp/resources/html/extraworkform.html
@@ -4,56 +4,58 @@
 	</div>
 	
 	<header id="A4_header" class="mceNonEditable" style="top: 25mm;">
-		<section class="mceNonEditable" style="width: 180mm;">
+		<section class="mceNonEditable" style="width: 45mm;">
 			<table class="form-table mceNonEditable">
 				<tbody class="mceNonEditable">
 					<tr style="height: 50%;">
-						<td class="content-align-center text-title-semi" style="width: 10%;">문서번호</td>
-						<td id="documentId" class="content-align-center text-content">공란</td>
+						<td class="content-align-center text-title-semi" style="width: 18mm;">문서번호</td>
+						<td id="documentId" class="content-align-center text-content" style="width: 27mm;">공란</td>
 					</tr>
 					<tr>
-						<td class="content-align-center text-title-semi" style="width: 10%;">보존기간</td>
-						<td id="documentRetentionPeriod" class="content-align-center text-content">공란</td>
+						<td class="content-align-center text-title-semi" style="width: 18mm;">보존기간</td>
+						<td id="documentRetentionPeriod" class="content-align-center text-content" style="width: 27mm;">공란</td>
 					</tr>
 				</tbody>
 			</table>
-			<table class="form-table mceNonEditable" style="border-top-style: none;">
+		</section>
+		<section class="mceNonEditable" style="width: 135mm;">
+			<table class="form-table mceNonEditable">
 				<tbody class="mceNonEditable">
 					<tr id="formApprovalPosition">
 						<td class="content-align-center text-title-semi" rowspan="4" style="width: 10%;">결재</td>
-						<td id="positionText1" class="content-align-center text-content">공란</td>
-						<td id="positionText2" class="content-align-center text-content">공란</td>
-						<td id="positionText3" class="content-align-center text-content">공란</td>
-						<td id="positionText4" class="content-align-center text-content">공란</td>
-						<td id="positionText5" class="content-align-center text-content">공란</td>
+						<td class="positionText content-align-center text-content">공란</td>
+						<td class="positionText content-align-center text-content">공란</td>
+						<td class="positionText content-align-center text-content">공란</td>
+						<td class="positionText content-align-center text-content">공란</td>
+						<td class="positionText content-align-center text-content">공란</td>
 					</tr>
 					<tr id="formApprovalState" style="height: 50%;">
-						<td id="stateText1" class="content-align-center text-content">공란</td>
-						<td id="stateText2" class="content-align-center text-content">공란</td>
-						<td id="stateText3" class="content-align-center text-content">공란</td>
-						<td id="stateText4" class="content-align-center text-content">공란</td>
-						<td id="stateText5" class="content-align-center text-content">공란</td>
+						<td class="stateText content-align-center text-content">공란</td>
+						<td class="stateText content-align-center text-content">공란</td>
+						<td class="stateText content-align-center text-content">공란</td>
+						<td class="stateText content-align-center text-content">공란</td>
+						<td class="stateText content-align-center text-content">공란</td>
 					</tr>
 					<tr id="formApprovalName">
-						<td id="nameText1" class="content-align-center text-content">공란</td>
-						<td id="nameText2" class="content-align-center text-content">공란</td>
-						<td id="nameText3" class="content-align-center text-content">공란</td>
-						<td id="nameText4" class="content-align-center text-content">공란</td>
-						<td id="nameText5" class="content-align-center text-content">공란</td>
+						<td class="nameText content-align-center text-content">공란</td>
+						<td class="nameText content-align-center text-content">공란</td>
+						<td class="nameText content-align-center text-content">공란</td>
+						<td class="nameText content-align-center text-content">공란</td>
+						<td class="nameText content-align-center text-content">공란</td>
 					</tr>
 					<tr id="formApprovalDate">
-						<td id="dateText1" class="content-align-center text-content">공란</td>
-						<td id="dateText2" class="content-align-center text-content">공란</td>
-						<td id="dateText3" class="content-align-center text-content">공란</td>
-						<td id="dateText4" class="content-align-center text-content">공란</td>
-						<td id="dateText5" class="content-align-center text-content">공란</td>
+						<td class="dateText content-align-center text-content">공란</td>
+						<td class="dateText content-align-center text-content">공란</td>
+						<td class="dateText content-align-center text-content">공란</td>
+						<td class="dateText content-align-center text-content">공란</td>
+						<td class="dateText content-align-center text-content">공란</td>
 					</tr>
 				</tbody>
 			</table>
 		</section>
 	</header>
 	
-	<nav id="A4_nav" class="mceNonEditable" style="top: 125mm;">
+	<nav id="A4_nav" class="mceNonEditable" style="top: 75mm;">
 		<section class="mceNonEditable" style="width: 180mm;">
 			<table class="form-table mceNonEditable">
 				<tbody class="mceNonEditable">
@@ -74,7 +76,7 @@
 		</section>
 	</nav>
 	
-	<div id="A4_main" class="mceNonEditable" style="top: 175mm;">
+	<div id="A4_main" class="mceNonEditable" style="top: 125mm;">
 		<section class="mceNonEditable" style="width: 180mm;">
 			<table class="form-table mceNonEditable">
 				<tbody class="mceNonEditable">
