--- a/src/main/webapp/resources/html/extraworkform.html
+++ b/src/main/webapp/resources/html/extraworkform.html
@@ -23,32 +23,32 @@
 				<tbody class="mceNonEditable">
 					<tr id="formApprovalPosition">
 						<td class="content-align-center text-title-semi" rowspan="4" style="width: 10%;">결재</td>
-						<td class="positionText content-align-center text-content">공란</td>
-						<td class="positionText content-align-center text-content">공란</td>
-						<td class="positionText content-align-center text-content">공란</td>
-						<td class="positionText content-align-center text-content">공란</td>
-						<td class="positionText content-align-center text-content">공란</td>
+						<td class="positionText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="positionText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="positionText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="positionText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="positionText content-align-center text-content" style="width: 18%;">공란</td>
 					</tr>
 					<tr id="formApprovalState" style="height: 50%;">
-						<td class="stateText content-align-center text-content">공란</td>
-						<td class="stateText content-align-center text-content">공란</td>
-						<td class="stateText content-align-center text-content">공란</td>
-						<td class="stateText content-align-center text-content">공란</td>
-						<td class="stateText content-align-center text-content">공란</td>
+						<td class="stateText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="stateText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="stateText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="stateText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="stateText content-align-center text-content" style="width: 18%;">공란</td>
 					</tr>
 					<tr id="formApprovalName">
-						<td class="nameText content-align-center text-content">공란</td>
-						<td class="nameText content-align-center text-content">공란</td>
-						<td class="nameText content-align-center text-content">공란</td>
-						<td class="nameText content-align-center text-content">공란</td>
-						<td class="nameText content-align-center text-content">공란</td>
+						<td class="nameText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="nameText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="nameText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="nameText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="nameText content-align-center text-content" style="width: 18%;">공란</td>
 					</tr>
 					<tr id="formApprovalDate">
-						<td class="dateText content-align-center text-content">공란</td>
-						<td class="dateText content-align-center text-content">공란</td>
-						<td class="dateText content-align-center text-content">공란</td>
-						<td class="dateText content-align-center text-content">공란</td>
-						<td class="dateText content-align-center text-content">공란</td>
+						<td class="dateText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="dateText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="dateText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="dateText content-align-center text-content" style="width: 18%;">공란</td>
+						<td class="dateText content-align-center text-content" style="width: 18%;">공란</td>
 					</tr>
 				</tbody>
 			</table>
