--- a/src/main/webapp/resources/html/businesstripform.html
+++ b/src/main/webapp/resources/html/businesstripform.html
@@ -86,27 +86,27 @@
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">출장시작날짜</td>
-						<td class="content-align-center text-content mceEditable businessTripFormStartDate"></td>
+						<td class="documentContent content-align-center text-content mceEditable businessTripFormStartDate"></td>
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">출장종료날짜</td>
-						<td class="content-align-center text-content mceEditable businessTripFormEndDate"></td>
+						<td class="documentContent content-align-center text-content mceEditable businessTripFormEndDate"></td>
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">경비</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="documentContent content-align-center text-content mceEditable"></td>
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">출장장소</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="documentContent content-align-center text-content mceEditable"></td>
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">출장사유</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="documentContent content-align-center text-content mceEditable"></td>
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">출장 중 연락처</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="documentContent content-align-center text-content mceEditable"></td>
 					</tr>
 				</tbody>
 			</table>
