--- a/src/main/webapp/resources/html/extraworkform.html
+++ b/src/main/webapp/resources/html/extraworkform.html
@@ -86,11 +86,11 @@
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">근무날짜</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="documentContent content-align-center text-content mceEditable"></td>
 					</tr>
 					<tr style="height: 60mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">근무사유</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="documentContent content-align-center text-content mceEditable"></td>
 					</tr>
 				</tbody>
 			</table>
