--- a/src/main/webapp/resources/html/familyeventform.html
+++ b/src/main/webapp/resources/html/familyeventform.html
@@ -86,19 +86,19 @@
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">경조사 날짜</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="documentContent content-align-center text-content mceEditable"></td>
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">경조사 종류</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="documentContent content-align-center text-content mceEditable"></td>
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">경조행사 장소</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="documentContent content-align-center text-content mceEditable"></td>
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">입금계좌</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="documentContent content-align-center text-content mceEditable"></td>
 					</tr>
 				</tbody>
 			</table>
