--- a/src/main/webapp/resources/html/militaryserviceform.html
+++ b/src/main/webapp/resources/html/militaryserviceform.html
@@ -86,15 +86,15 @@
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">훈련날짜</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="documentContent content-align-center text-content mceEditable"></td>
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">훈련기간</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="documentContent content-align-center text-content mceEditable"></td>
 					</tr>
 					<tr style="height: 20mm;">
 						<td class="content-align-center text-title-semi" style="width: 10%;">훈련장소</td>
-						<td class="content-align-center text-content mceEditable"></td>
+						<td class="documentContent content-align-center text-content mceEditable"></td>
 					</tr>
 				</tbody>
 			</table>
